# dev-secrets-scanner

./: README.md  __init__.py  pyproject.toml
tests/: test_cli_interface.py  test_reporter.py  test_scanner_core.py
